# ws-ephemeral

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  ws-ephemeral.xml
.github/workflows/: docker-image.yml
src/: config.py  logger.py  monitor.py  run.py  server.py  util.py  ws.py
src/lib/: decorators.py  qbit.py
src/logger/: __init__.py  config.yaml
src/ws/: __init__.py  cookie.py  portmanager.py  ws.py
src/ws-ephemeral/: monitor.py  run.py  util.py
src/ws_ephemeral/: __init__.py  __main__.py  cli.py  jobs.py  model.py  runner.py  server.py  status.py
src/ws_ephemeral/cfg/: __init__.py  config.py
src/ws_ephemeral/lib/: __init__.py  decorators.py
src/ws_ephemeral/lib/qbit/: __init__.py  decorators.py  manager.py
src/ws_ephemeral/lib/ws/: __init__.py  cookie.py  decorators.py  types.py  ws.py
