[tool.poetry]
name = "windscribe"
version = "0.1.0"
description = "request ephemeral port"
authors = ["Dhruvin Shah <dhruvin3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
black = "^22.6.0"
pylint = "^2.14.5"
isort = "^5.10.1"

[tool.pylint.basic]
good-names = ["ws"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
