[tool.poetry]
name = "ws-ephemeral"
version = "2.0.0"
description = "request matching ephemeral port"
authors = ["Dhruvin Shah <dhruvin3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
httpx = ">=0.23.0"
beautifulsoup4 = "^4.11.1"
qbittorrent-api = ">=2023.3.44"
tqdm = "^4.65.0"
pyyaml = "^6.0"
semver = "^3.0.0"

[tool.poetry.group.dev.dependencies]
tqdm-stubs = ">=0.2.1"
mypy = ">=0.971"
black = ">=22.6.0"
pylint = ">=2.14.5"
isort = ">=5.10.1"
types-pyyaml = "^6.0.12.9"

[tool.pylint.basic]
good-names = ["ws"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
